<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HiLotto</string>

    <string name="home">홈</string>
    <string name="statistics">통계</string>
    <string name="recommend">추천 번호</string>
    <string name="my">내 번호</string>
    <string name="setting">설정</string>

    <!-- 통계 탭 이름 -->
    <string-array name="tabs_statistics">
        <item>합계</item>
        <item>출현/미출현</item>
        <item>연속번호</item>
        <item>홀/짝</item>
        <item>당첨</item>
    </string-array>
    <string name="sum">합계</string>
    <string name="pick">출현/미출현</string>
    <string name="continues">연속번호</string>
    <string name="odd_even">홀/짝</string>
    <string name="win">당첨</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="search">검색</string>
    <string name="search_round">회차 검색</string>
    <string name="edit">수정</string>
    <string name="edit2">수정하기</string>
    <string name="edit_number">번호 수정</string>
    <string name="selected_number">선택된 번호</string>
    <string name="win_history">역대 당첨 결과</string>
    <string name="win_round">당첨 회차 : </string>
    <string name="check_win">당첨결과 확인</string>
    <string name="sort_default">기본</string>
    <string name="sort_acs">과거순</string>
    <string name="sort_desc">최근순</string>
    <string name="sort_win">순위순</string>
    <string name="delete">삭제하기</string>
    <string name="save">저장</string>
    <string name="loading">loading...</string>
    <string name="app_setting">앱 설정</string>
    <string name="setting_statistics">통계 회차 설정</string>
    <string name="export_my_number">내 번호 내보내기</string>
    <string name="import_my_number">내 번호 가져오기</string>
    <string name="app_info">앱 정보</string>
    <string name="app_version">앱 버전</string>
    <string name="share">공유하기</string>
    <string name="share_app">친구에게 앱 알려주기</string>

    <!-- Firebase Analytics Events & Key -->
    <string name="event_screen_fragment">screen_fragment</string>
    <string name="key_screen_fragment">fragment</string>

    <!-- Firebase Crashlytics Events & Key -->
    <string name="key_activity">activity</string>
    <string name="key_fragment">fragment</string>

    <!-- Kakao Template Id -->
    <string name="template_id_app">37055</string>

    <string name="date_empty" tools:ignore="TypographyDashes">0000-00-00</string>
    <string name="title_round_empty">회 당첨 번호</string>
    <string name="win_count_desc">1등 당첨자 수 </string>
    <string name="win_count_empty">명</string>
    <string name="current_result">최근 회차 결과</string>
    <string name="more">더보기</string>
    <string name="store">1등 당첨 판매점</string>
    <string name="store_address">1등 당첨 판매점 주소</string>
    <string name="copy">복사</string>
    <string name="copy_store">판매점 복사</string>
    <string name="copy_address">판매점 주소 복사</string>
    <string name="condition_sum">합계 적용</string>
    <string name="condition_pick">출현/미출현 적용</string>
    <string name="condition_continues">연속번호 적용</string>
    <string name="condition_odd_even">홀/짝 적용</string>
    <string name="condition_all">전체 적용</string>
    <string name="included_numbers">포함 수</string>
    <string name="not_included_numbers">미포함 수</string>
    <string name="create_numbers">번호 생성</string>
    <string name="remove_numbers">번호 삭제</string>
    <string name="save_numbers">번호 저장</string>
    <string name="bonus">BONUS</string>
    <string name="include_bonus">보너스 번호 포함</string>
    <string name="sum_avg_empty">0회 합계 평균 : </string>
    <string name="sum_min">21</string>
    <string name="sum_max">255</string>
    <string name="sum_empty">134</string>
    <string name="title_pick_count">구간별 출현횟수</string>
    <string name="title_nopick_num">미출현번호</string>
    <string name="pick_range1">1~10번</string>
    <string name="pick_range2">11~20번</string>
    <string name="pick_range3">21~30번</string>
    <string name="pick_range4">31~40번</string>
    <string name="pick_range5">41~45번</string>
    <string name="round_empty">회</string>
    <string name="continues_empty">연속번호 없음</string>
    <string name="odd_even_same">3:3</string>
    <string name="title_prize_total">총 당첨금</string>
    <string name="title_prize_by_one">1게임 당첨금</string>
    <string name="title_win_count">당첨자 수</string>
    <string name="prize_total_empty">0원 (약 0원)</string>
    <string name="prize_by_one_empty">0원 (약 0원)</string>
    <string name="title_win_prize_max">1게임 최고 당첨금</string>
    <string name="title_win_prize_min">1게임 최소 당첨금</string>
    <string name="title_win_count_max">최대 당첨자 수</string>
    <string name="title_win_count_min">최소 당첨자 수</string>
    <string name="win_prize_max">000회 : 0원 (약 0원)</string>
    <string name="win_prize_min">000회 : 0원 (약 0원)</string>
    <string name="win_count_max">000회 : 0명</string>
    <string name="win_count_min">000회 : 0명</string>

    <string name="msg_search_hint">검색할 단어를 입력해주세요.</string>
    <string name="msg_search_hint_round">검색할 회차를 입력해주세요.</string>
    <string name="msg_setting_statistics_hint">통계 낼 회차 수를 입력해주세요.</string>
    <string name="msg_success_save_setting_statistics">통계 회차를 설정 하였습니다.</string>
    <string name="msg_unknown_error">오류가 발생했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="msg_data_fail">데이터를 가져오는데 실패했습니다.\n잠시 후 다시 이용해주세요.</string>
    <string name="msg_not_include_number_max">미포함 수는 최대 6개 까지만 추가할 수 있습니다.</string>
    <string name="msg_remove_number">번호를 삭제 하시겠습니까?</string>
    <string name="msg_exist_include_number">포함수에 추가된 수는 미포함 시킬 수 없습니다.</string>
    <string name="msg_exist_not_include_number">미포함수에 추가된 수는 포함 시킬 수 없습니다.</string>
    <string name="msg_number_not_created">번호를 생성하거나 모두 입력해주세요.</string>
    <string name="msg_success_save_number">번호를 저장하였습니다!</string>
    <string name="msg_numbers_is_exist">번호가 이미 저장되어 있습니다.</string>
    <string name="msg_check_win_click">당첨결과 확인 버튼이 동작하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="msg_store_empty">당첨점 정보가 없습니다.</string>
    <string name="msg_numbers_empty">저장된 번호가 없습니다.</string>
    <string name="msg_not_input_same_number">같은 숫자를 입력할 수 없습니다.</string>
    <string name="msg_edit_fail">수정에 실패 했습니다. 다시 시도해주세요.</string>
    <string name="msg_edit_click">수정 버튼이 동작하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="msg_delete_click">삭제 버튼이 동작하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="msg_copy_store_click">판매점 복사 버튼이 동작하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="msg_copy_address_click">판매점 주소 복사 버튼이 동작하지 않습니다.\n관리자에게 문의해주세요.</string>
    <string name="msg_share_fail">"공유하기에 실패했습니다.\n잠시 후 다시 시도해주세요."</string>
    <string name="msg_export_info">내 번호를 내부저장소에 저장 하시겠습니까?</string>
    <string name="msg_import_info">내 번호를 내부저장소에서 가져오시겠습니까?</string>
    <string name="msg_empty_my_number">내 번호가 없습니다.</string>
    <string name="msg_fail_export_my_number">내 번호 내보내기에 실패하였습니다.\n관리자에게 문의해주시기 바랍니다.</string>
    <string name="msg_fail_import_my_number">내 번호 가져오기에 실패하였습니다.\nDownload 폴더에 myNumber.json 파일이 있는지 확인해주세요.</string>
    <string name="msg_success_export_my_number">내 번호를 내부저장소에 저장하였습니다.</string>
    <string name="msg_success_import_my_number">내 번호를 내부저장소에서 가져왔습니다.</string>
    <string name="msg_export_description">1. [추천 번호] 화면에서 번호를 직접 입력하거나 생성한 후 번호를 저장합니다.\n\n2. [내 번호] 화면에 번호가 저장되었는지 확인합니다.\n\n3. [설정] 화면에서 내 번호 내보내기를 하면 내부 저장소에 Downloads 폴더에 myNumber.json 으로 내 번호가 저장됩니다. </string>
    <string name="msg_import_description">1. [설정] 화면에서 내 번호 가져오기를 누른 후 [확인]을 누릅니다.\n\n2. myNumber.json 이라는 파일을 클릭하시면 내 번호 가져오기를 할 수 있습니다.</string>
</resources>
