<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_recommend"
        android:title="@string/recommend" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:title="@string/my" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
</menu>