<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.imaec.hilotto.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/AppTheme.Toolbar"
            android:text="@string/setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/tv_app_setting"
            android:text="@string/app_setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@id/tv_setting_statistics_title"/>

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/tv_setting_statistics_title"
            android:text="@string/setting_statistics"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_setting_statistics"
            app:layout_constraintTop_toBottomOf="@id/tv_app_setting"
            app:layout_constraintBottom_toTopOf="@id/tv_export_my_number"/>

        <TextView
            style="@style/TextSettingContent"
            android:id="@+id/tv_setting_statistics"
            android:layout_marginTop="8dp"
            android:text="@{vm.settingStatistics}"
            app:layout_constraintLeft_toRightOf="@id/tv_setting_statistics_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_setting"
            app:layout_constraintBottom_toTopOf="@id/tv_export_my_number"
            tools:text="20회"/>

        <View
            android:id="@+id/view_setting_statistics"
            bindSingleClick="@{() -> vm.onClickSettingStatistics()}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_setting_statistics_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_setting_statistics_title"/>

        <TextView
            style="@style/TextSettingSubTitle"
            bindSingleClick="@{() -> vm.onClickExport()}"
            android:id="@+id/tv_export_my_number"
            android:text="@string/export_my_number"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_statistics_title"
            app:layout_constraintBottom_toTopOf="@id/tv_import_my_number"/>

        <ImageView
            android:id="@+id/iv_export_info"
            bindSingleClick="@{() -> vm.onClickExportInfo()}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_info"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_export_my_number"
            app:layout_constraintBottom_toBottomOf="@id/tv_export_my_number"
            app:layout_constraintDimensionRatio="1"/>

        <TextView
            style="@style/TextSettingSubTitle"
            bindSingleClick="@{() -> vm.onClickImport()}"
            android:id="@+id/tv_import_my_number"
            android:text="@string/import_my_number"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_export_my_number"
            app:layout_constraintBottom_toTopOf="@id/tv_app_info"/>

        <ImageView
            android:id="@+id/iv_import_info"
            bindSingleClick="@{() -> vm.onClickImportInfo()}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_info"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_import_my_number"
            app:layout_constraintBottom_toBottomOf="@id/tv_import_my_number"
            app:layout_constraintDimensionRatio="1"/>

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/tv_app_info"
            android:text="@string/app_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_import_my_number"
            app:layout_constraintBottom_toTopOf="@id/tv_app_version_title"/>

        <TextView
            style="@style/TextSettingSubTitle"
            android:id="@+id/tv_app_version_title"
            android:layout_marginTop="8dp"
            android:text="@string/app_version"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_app_version"
            app:layout_constraintTop_toBottomOf="@id/tv_app_info"
            app:layout_constraintBottom_toTopOf="@id/tv_share_title"/>

        <TextView
            style="@style/TextSettingContent"
            android:id="@+id/tv_app_version"
            android:layout_marginTop="8dp"
            android:text="@{vm.appVersion}"
            app:layout_constraintLeft_toRightOf="@id/tv_app_version_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_info"
            app:layout_constraintBottom_toTopOf="@id/tv_share_title"
            tools:text="1.0.5" />

        <TextView
            style="@style/TextSettingTitle"
            android:id="@+id/tv_share_title"
            android:text="@string/share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_version_title" />

        <TextView
            style="@style/TextSettingSubTitle"
            bindSingleClick="@{() -> vm.onClickShare()}"
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:background="@drawable/ripple_primary_dark"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_share_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
