<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/search_round"/>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/bg_rounded_input"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionSearch"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:hint="@string/msg_search_hint_round"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button_cancel"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_search"
            app:layout_constraintTop_toBottomOf="@id/et_search"/>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/search"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
